--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-primary mb-4">Our Premium Tea Products</h2>
-                <p class="text-gray-600 max-w-3xl mx-auto">Hand-picked and expertly processed teas from the lush highlands of Indonesia, bringing exceptional flavor to your cup.</p>
+                <p class="text-gray-600 max-w-3xl mx-auto">Consistently high-quality teas from the lush highlands of Indonesia, processed with modern facilities and strict quality control. Ideal for importers and distributors seeking reliable supply and premium quality.</p>
             </div>
             <div class="grid md:grid-cols-2 gap-8">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
@@ -280,17 +280,38 @@
                             <h3 class="text-2xl font-bold text-primary">Black Tea</h3>
                             <span class="bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium">Best Seller</span>
                         </div>
-                        <p class="text-gray-600 mb-6 leading-relaxed">Our black tea offers a rich, full-bodied flavor with malty notes and a smooth finish. Harvested from mature leaves and fully oxidized for the perfect cup.</p>
+                        <div class="mb-6">
+                            <p class="text-gray-600 mb-4 leading-relaxed">Our black tea offers a rich, full-bodied flavor with malty notes and a smooth finish. Harvested from mature leaves and fully oxidized for the perfect cup.</p>
+                            <div class="grid grid-cols-2 gap-4 mb-4">
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Production Capacity</h4>
+                                    <p class="text-gray-600">180 tons/month</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Minimum Order</h4>
+                                    <p class="text-gray-600">1 ton</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Packaging</h4>
+                                    <p class="text-gray-600">25kg bags</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Shelf Life</h4>
+                                    <p class="text-gray-600">24 months</p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="flex flex-wrap gap-2 mb-6">
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">High Antioxidants</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bold Flavor</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Loose Leaf</span>
+                            <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
                                 Request a Quote <i class="fas fa-arrow-right ml-2"></i>
                             </a>
-                            <span class="text-sm text-gray-500">Available in bulk quantities</span>
+                            <span class="text-sm text-gray-500">Available for wholesale</span>
                         </div>
                     </div>
                 </div>
@@ -303,17 +324,38 @@
                             <h3 class="text-2xl font-bold text-primary">Green Tea</h3>
                             <span class="bg-secondary/10 text-secondary px-3 py-1 rounded-full text-sm font-medium">Organic</span>
                         </div>
-                        <p class="text-gray-600 mb-6 leading-relaxed">Our green tea provides a delicate, refreshing flavor with grassy notes and a subtle sweetness. Minimally processed to preserve natural benefits and flavor.</p>
+                        <div class="mb-6">
+                            <p class="text-gray-600 mb-4 leading-relaxed">Our green tea provides a delicate, refreshing flavor with grassy notes and a subtle sweetness. Minimally processed to preserve natural benefits and flavor.</p>
+                            <div class="grid grid-cols-2 gap-4 mb-4">
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Production Capacity</h4>
+                                    <p class="text-gray-600">180 tons/month</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Minimum Order</h4>
+                                    <p class="text-gray-600">1 ton</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Packaging</h4>
+                                    <p class="text-gray-600">25kg bags</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Shelf Life</h4>
+                                    <p class="text-gray-600">24 months</p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="flex flex-wrap gap-2 mb-6">
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Low Caffeine</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Fresh Aroma</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Premium Grade</span>
+                            <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
                                 Request a Quote <i class="fas fa-arrow-right ml-2"></i>
                             </a>
-                            <span class="text-sm text-gray-500">Available in bulk quantities</span>
+                            <span class="text-sm text-gray-500">Available for wholesale</span>
                         </div>
                     </div>
                 </div>
@@ -350,7 +392,7 @@
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-primary mb-4">Pure Essential Oils</h2>
-                <p class="text-gray-600 max-w-3xl mx-auto">Premium distilled essential oils extracted from Indonesian-grown plants, ideal for fragrances, cosmetics, and aromatherapy.</p>
+                <p class="text-gray-600 max-w-3xl mx-auto">Premium distilled essential oils extracted from Indonesian-grown plants, processed in our modern facilities with strict quality control. Perfect for manufacturers, distributors, and importers seeking consistent quality and reliable supply.</p>
             </div>
             <div class="grid md:grid-cols-2 gap-8">
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl h-full">
@@ -362,10 +404,32 @@
                             <h3 class="text-xl font-bold text-primary">Nutmeg Oil</h3>
                             <span class="bg-primary/10 text-primary px-3 py-1 rounded-full text-sm font-medium">Premium</span>
                         </div>
-                        <p class="text-gray-600 mb-6 leading-relaxed">Steam-distilled from Myristica fragrans seeds, our nutmeg oil is rich in aroma compounds with a warm, spicy scent.</p>
+                        <div class="mb-6">
+                            <p class="text-gray-600 mb-4 leading-relaxed">Steam-distilled from Myristica fragrans seeds, our nutmeg oil is rich in aroma compounds with a warm, spicy scent. Ideal for food, cosmetics, and pharmaceutical applications.</p>
+                            <div class="grid grid-cols-2 gap-4 mb-4">
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Production Capacity</h4>
+                                    <p class="text-gray-600">10 tons/month</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Minimum Order</h4>
+                                    <p class="text-gray-600">100 kg</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Packaging</h4>
+                                    <p class="text-gray-600">20kg drums</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Shelf Life</h4>
+                                    <p class="text-gray-600">36 months</p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="flex flex-wrap gap-2 mb-6">
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Food Grade</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">100% Pure</span>
+                            <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
+                            <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Steam Distilled</span>
                         </div>
                         <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
                             Request a Quote <i class="fas fa-arrow-right ml-2"></i>
@@ -381,10 +445,32 @@
                             <h3 class="text-xl font-bold text-primary">Patchouli Oil</h3>
                             <span class="bg-secondary/10 text-secondary px-3 py-1 rounded-full text-sm font-medium">Best Selling</span>
                         </div>
-                        <p class="text-gray-600 mb-6 leading-relaxed">Aged for enhanced aroma, our patchouli oil offers a rich, earthy scent perfect for fine fragrances and cosmetics.</p>
+                        <div class="mb-6">
+                            <p class="text-gray-600 mb-4 leading-relaxed">Aged for enhanced aroma, our patchouli oil offers a rich, earthy scent perfect for fine fragrances, cosmetics, and aromatherapy products.</p>
+                            <div class="grid grid-cols-2 gap-4 mb-4">
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Production Capacity</h4>
+                                    <p class="text-gray-600">10 tons/month</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Minimum Order</h4>
+                                    <p class="text-gray-600">100 kg</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Packaging</h4>
+                                    <p class="text-gray-600">20kg drums</p>
+                                </div>
+                                <div>
+                                    <h4 class="font-semibold text-gray-800">Shelf Life</h4>
+                                    <p class="text-gray-600">36 months</p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="flex flex-wrap gap-2 mb-6">
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Cosmetic Grade</span>
                             <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Dark Amber</span>
+                            <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Bulk Supply</span>
+                            <span class="bg-gray-100 px-3 py-1 rounded-full text-sm">Aged Quality</span>
                         </div>
                         <a href="#contact" class="text-primary hover:text-accent font-medium flex items-center">
                             Request a Quote <i class="fas fa-arrow-right ml-2"></i>
