--- a/products/tea.html
+++ b/products/tea.html
@@ -386,7 +386,6 @@
 
                 <!-- Product Information -->
                 <div class="lg:w-1/2">
-                    <!-- <span class="bg-primary/10 text-primary px-4 py-2 rounded-full text-sm font-medium">Best Seller</span> -->
                     <h2 class="text-4xl font-bold text-primary mt-4 mb-6">Black Tea</h2>
                     <p class="text-gray-600 text-lg mb-8">Our high-quality black tea offers a rich, full-bodied flavor with malty notes and a smooth finish. Carefully processed from mature tea leaves, it's perfect for various applications from tea bags to ready-to-drink beverages.</p>
 
@@ -417,13 +416,104 @@
                         <span class="bg-gray-100 px-4 py-2 rounded-full text-sm">Bulk Supply</span>
                     </div>
 
-                    <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20Black%20Tea%20products" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl transition duration-300 inline-flex items-center">
+                    <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20Black%20Tea%20products" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl transition duration-300 inline-flex items-center mb-12">
                         <i class="fab fa-whatsapp text-xl mr-2"></i> Order Black Tea
                     </a>
+
+                </div>
+            </div>
+            <!-- Tea Variants -->
+            <div class="mt-12">
+                <h3 class="text-2xl font-bold text-primary mb-6">Available Variants</h3>
+                <div class="flex flex-wrap gap-4 justify-center md:justify-start">
+                    <!-- PF (Pekoe Fannings) -->
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px]" onclick="openVariantPopup('PF (Pekoe Fannings)', 'Quick-brewing, strong flavored tea, perfect for commercial tea bags.', '/assets/images/black-tea-pf.jpg')">
+                        <div class="flex flex-col">
+                            <div class="h-48">
+                                <img src="/assets/images/black-tea-pf.jpg" alt="Black Tea PF" class="w-full h-full object-cover">
+                            </div>
+                            <div class="p-4">
+                                <h4 class="font-bold text-primary text-center">PF (Pekoe Fannings)</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- OP (Orange Pekoe) -->
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px]" onclick="openVariantPopup('OP (Orange Pekoe)', 'Whole tea leaves offering delicate flavor and lighter body.', '/assets/images/black-tea-op.jpg')">
+                        <div class="flex flex-col">
+                            <div class="h-48">
+                                <img src="/assets/images/black-tea-op.jpg" alt="Black Tea OP" class="w-full h-full object-cover">
+                            </div>
+                            <div class="p-4">
+                                <h4 class="font-bold text-primary text-center">OP (Orange Pekoe)</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- BOP (Broken Orange Pekoe) -->
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px]" onclick="openVariantPopup('BOP (Broken Orange Pekoe)', 'Strong, robust flavor ideal for breakfast blends.', '/assets/images/black-tea-bop.jpg')">
+                        <div class="flex flex-col">
+                            <div class="h-48">
+                                <img src="/assets/images/black-tea-bop.jpg" alt="Black Tea BOP" class="w-full h-full object-cover">
+                            </div>
+                            <div class="p-4">
+                                <h4 class="font-bold text-primary text-center">BOP (Broken Orange Pekoe)</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- BOPF (Broken Orange Pekoe Fannings) -->
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px]" onclick="openVariantPopup('BOPF (Broken Orange Pekoe Fannings)', 'Strong, full-bodied brew with bright reddish liquor.', '/assets/images/black-tea-bopf.jpg')">
+                        <div class="flex flex-col">
+                            <div class="h-48">
+                                <img src="/assets/images/black-tea-bopf.jpg" alt="Black Tea BOPF" class="w-full h-full object-cover">
+                            </div>
+                            <div class="p-4">
+                                <h4 class="font-bold text-primary text-center">BOPF (Broken Orange Pekoe Fannings)</h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Dust -->
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px]" onclick="openVariantPopup('Dust', 'Very strong, brisk cup for mass-market tea bags.', '/assets/images/black-tea-dust.jpg')">
+                        <div class="flex flex-col">
+                            <div class="h-48">
+                                <img src="/assets/images/black-tea-dust.jpg" alt="Black Tea Dust" class="w-full h-full object-cover">
+                            </div>
+                            <div class="p-4">
+                                <h4 class="font-bold text-primary text-center">Dust</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Variant Popup -->
+    <div id="variantPopup" class="fixed inset-0 bg-black bg-opacity-75 z-50 hidden flex items-center justify-center">
+        <div class="bg-white rounded-2xl max-w-6xl w-full mx-4 overflow-hidden">
+            <div class="flex flex-col md:flex-row">
+                <!-- Image Section -->
+                <div class="md:w-1/2 h-[600px]">
+                    <img id="variantPopupImage" src="" alt="" class="w-full h-full object-cover">
+                </div>
+                <!-- Content Section -->
+                <div class="md:w-1/2 p-8 flex flex-col">
+                    <div class="flex items-start justify-between mb-6">
+                        <h3 id="variantPopupTitle" class="text-2xl font-bold text-primary"></h3>
+                        <button onclick="closeVariantPopup()" class="text-gray-500 hover:text-gray-700">
+                            <i class="fas fa-times text-xl"></i>
+                        </button>
+                    </div>
+                    <p id="variantPopupDescription" class="text-gray-600 mb-8"></p>
+                    <a id="variantPopupWhatsApp" href="#" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl transition duration-300 inline-flex items-center">
+                        <i class="fab fa-whatsapp text-xl mr-2"></i> Inquire Now
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Green Tea Section -->
     <section id="green-tea" class="py-20 bg-light">
@@ -710,6 +800,46 @@
         document.addEventListener('keydown', function(e) {
             if (e.key === 'Escape') {
                 closeImagePopup();
+            }
+        });
+
+        // Variant Popup Functions
+        function openVariantPopup(title, description, imageSrc) {
+            const popup = document.getElementById('variantPopup');
+            const popupImage = document.getElementById('variantPopupImage');
+            const popupTitle = document.getElementById('variantPopupTitle');
+            const popupDescription = document.getElementById('variantPopupDescription');
+            const popupWhatsApp = document.getElementById('variantPopupWhatsApp');
+
+            popupImage.src = imageSrc;
+            popupImage.alt = title;
+            popupTitle.textContent = title;
+            popupDescription.textContent = description;
+            popupWhatsApp.href = `https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20Black%20Tea%20${encodeURIComponent(title)}`;
+
+            popup.classList.remove('hidden');
+            popup.classList.add('flex');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeVariantPopup() {
+            const popup = document.getElementById('variantPopup');
+            popup.classList.add('hidden');
+            popup.classList.remove('flex');
+            document.body.style.overflow = '';
+        }
+
+        // Close popup when clicking outside
+        document.getElementById('variantPopup').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeVariantPopup();
+            }
+        });
+
+        // Close popup with Escape key
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                closeVariantPopup();
             }
         });
     </script>
